# timew-report

./: .gitchangelog.rc  .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: debs.yml  python-eol-check.yml  python-package.yml  release.yml  rpmdev.yml
packaging/el9/: timew_report.spec
src/timewreport/: __init__.py  config.py  interval.py  parser.py
tests/: config_test.py  interval_test.py  parser_test.py
timewreport/: config.py  interval.py  parser.py
