[metadata]
name = timew-report
version = attr: setuptools_scm.get_version
description = An interface for Timewarrior report data
url = https://github.com/lauft/timew-report
author = Thomas Lauf
author_email = Thomas.Lauf@tngtech.com
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_file = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Programming Language :: Python :: 3 :: Only
    Operating System :: OS Independent
    Environment :: Console
    Topic :: Utilities

keywords =
    extensions
    timewarrior
    taskwarrior
    time-tracking
    timew

project_urls =
    Bug Reports = https://github.com/lauft/timew-report/issues
    Source = https://github.com/lauft/timew-report

[options]
python_requires = >3, <4

install_requires =
    python-dateutil
    deprecation

packages = find:

[options.packages.find]
where = src

[options.extras_require]
test =
    pytest
    pytest-cov
cov =
    coverage[toml]
    coverage_python_version
all =
    %(cov)s
    %(test)s

[check]
metadata = true
restructuredtext = true
strict = false

[check-manifest]
ignore =
    .gitattributes
    .gitignore
    .pre-commit-config.yaml

[flake8]
exclude =
    .git,
    __pycache__,
    build,
    dist,
    docs,
    test

max-line-length = 101
